--- a/src/app/components/thoughts/add-thought/add-thought.component.html
+++ b/src/app/components/thoughts/add-thought/add-thought.component.html
@@ -1,1 +1,77 @@
-<p>add-thought works!</p>
+<section class="container add-thoughts ff-inter">
+  <header class="header">
+    <h2>Adicione um<br />pensamento novo:</h2>
+  </header>
+  <form>
+    <label for="thought">Pensamento</label>
+    <textarea
+      class="textarea"
+      name="thought"
+      id="thought"
+      placeholder="Digite o pensamento"
+    ></textarea>
+    <label for="author">Autoria</label>
+    <input
+      type="text"
+      class="input"
+      id="author"
+      name="author"
+      placeholder="Informe a autoria ou fonte"
+    />
+    <label for="model">Selecione o modelo do card</label>
+    <div class="container-radio">
+      <div class="radio-model">
+        <label for="model1">
+          <input type="radio" id="model1" value="model1" name="model-card" />
+          <div class="custom-radio">
+            <span></span>
+          </div>
+          <span>Modelo 1</span>
+        </label>
+        Prévia:
+        <div class="model model1 ff-roboto-mono">
+          <img src="../../../../assets/images/model1.png" alt="Aspas azuis" />
+          <p class="content">Aqui vai o conteúdo</p>
+          <p class="author">Aqui vai a <strong>autoria</strong></p>
+        </div>
+      </div>
+      <div class="radio-model">
+        <label for="model2">
+          <input type="radio" id="model2" value="model2" name="model-card" />
+          <div class="custom-radio">
+            <span></span>
+          </div>
+          <span>Modelo 2</span>
+        </label>
+        Prévia:
+        <div class="model model2 ff-roboto-mono">
+          <img
+            src="../../../../assets/images/model2.png"
+            alt="Aspas azul claro"
+          />
+          <p class="content">Aqui vai o conteúdo</p>
+          <p class="author">Aqui vai a <strong>autoria</strong></p>
+        </div>
+      </div>
+      <div class="radio-model">
+        <label for="model3">
+          <input type="radio" id="model3" value="model3" name="model-card" />
+          <div class="custom-radio">
+            <span></span>
+          </div>
+          <span>Modelo 3</span>
+        </label>
+        Prévia:
+        <div class="model model3 ff-roboto-mono">
+          <img src="../../../../assets/images/model3.png" alt="Aspas verdes" />
+          <p class="content">Aqui vai o conteúdo</p>
+          <p class="author">Aqui vai a <strong>autoria</strong></p>
+        </div>
+      </div>
+    </div>
+    <div class="actions">
+      <button class="button">Salvar</button>
+      <button class="button">Cancelar</button>
+    </div>
+  </form>
+</section>
