--- a/src/app/components/thoughts/add-thought/add-thought.component.html
+++ b/src/app/components/thoughts/add-thought/add-thought.component.html
@@ -78,8 +78,8 @@
       </div>
     </div>
     <div class="actions">
-      <button class="button">Salvar</button>
-      <button class="button">Cancelar</button>
+      <button (click)="addThought()" class="button">Salvar</button>
+      <button (click)="cancelThought()" class="button">Cancelar</button>
     </div>
   </form>
 </section>
