--- a/src/app/components/thoughts/add-thought/add-thought.component.html
+++ b/src/app/components/thoughts/add-thought/add-thought.component.html
@@ -97,7 +97,7 @@
     </div>
     <div class="actions">
       <button (click)="addThought()" class="button">Salvar</button>
-      <button (click)="cancelThought()" class="button">Cancelar</button>
+      <button routerLink="/" class="button">Cancelar</button>
     </div>
   </form>
 </section>
