--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,6 +66,7 @@ h2 {
   border: 2px solid misc.$blue-500;
   border-radius: 10px;
   transition: 0.5s ease;
+  cursor: pointer;
 
   &:hover {
     border: 2px solid misc.$aqua-500;
