--- a/src/app/components/thoughts/list-thoughts/list-thoughts.component.html
+++ b/src/app/components/thoughts/list-thoughts/list-thoughts.component.html
@@ -5,4 +5,14 @@
       Adicionar pensamento
     </button>
   </header>
+  <div class="board" *ngIf="listThoughts.length > 0; else noThoughts">
+    <div *ngFor="let thought of listThoughts">
+      <app-thought [thought]="thought" />
+    </div>
+  </div>
 </section>
+<ng-template #noThoughts>
+  <div class="ff-inter no-thoughts">
+    <p>Ainda não há pensamentos cadastrados!</p>
+  </div>
+</ng-template>
