--- a/src/app/components/thoughts/edit-thought/edit-thought.component.html
+++ b/src/app/components/thoughts/edit-thought/edit-thought.component.html
@@ -96,7 +96,7 @@
       </div>
     </div>
     <div class="actions">
-      <button (click)="addThought()" class="button">Salvar</button>
+      <button (click)="editThought()" class="button">Salvar</button>
       <button (click)="cancel()" class="button">Cancelar</button>
     </div>
   </form>
