--- a/src/app/components/thoughts/list-thoughts/list-thoughts.component.scss
+++ b/src/app/components/thoughts/list-thoughts/list-thoughts.component.scss
@@ -5,6 +5,7 @@
   flex-wrap: wrap;
   gap: misc.p2r(32px);
   justify-content: center;
+  align-items: center;
   margin: misc.p2r(16px) 0 misc.p2r(32px);
 }
 
