--- a/src/app/components/thoughts/thought/thought.component.html
+++ b/src/app/components/thoughts/thought/thought.component.html
@@ -6,10 +6,16 @@
   <p class="content">{{ thought.content }}</p>
   <p class="author">{{ thought.author }}</p>
   <div class="actions">
-    <button class="edit-button">
+    <button
+      class="edit-button"
+      routerLink="/thoughts/edit-thought/{{ thought.id }}"
+    >
       <img src="/assets/images/icons/edit-icon.png" alt="Ícone de editar" />
     </button>
-    <button class="delete-button">
+    <button
+      class="delete-button"
+      routerLink="/thoughts/delete-thought/{{ thought.id }}"
+    >
       <img src="/assets/images/icons/delete-icon.png" alt="Ícone de excluir" />
     </button>
   </div>
