--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,4 +72,16 @@ h2 {
     border: 2px solid misc.$aqua-500;
     color: misc.$aqua-500;
   }
+
+  &--disabled {
+    background: misc.$gray-500;
+    color: misc.$white;
+    max-width: 270px;
+    width: 250px;
+    padding: misc.p2r(16px);
+    margin: 0 auto;
+    border: 2px solid misc.$gray-300;
+    border-radius: 10px;
+    transition: 0.5s ease;
+  }
 }
