--- a/src/app/components/thoughts/list-thoughts/list-thoughts.component.scss
+++ b/src/app/components/thoughts/list-thoughts/list-thoughts.component.scss
@@ -13,9 +13,74 @@
   display: flex;
   flex-direction: column;
   gap: misc.p2r(32px);
+  justify-content: center;
 }
 
 .no-thoughts {
   text-align: center;
   padding: misc.p2r(32px) 0 misc.p2r(80px);
+}
+
+.search-thoughts {
+  background: misc.$gray-200;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  height: 44px;
+  left: 421px;
+  top: 490px;
+  width: 510px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  align-self: center;
+
+  @media screen and (min-width: 216px) {
+    width: 250px;
+  }
+
+  @media screen and (min-width: 396px) {
+    width: 380px;
+  }
+
+  @media screen and (min-width: 576px) {
+    width: 510px;
+  }
+
+  img {
+    padding-right: 15px;
+  }
+}
+
+input {
+  &::placeholder {
+    color: misc.$gray-300;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: misc.p2r(18px);
+    line-height: misc.p2r(29px);
+  }
+
+  &[type='search'] {
+    &::-webkit-search-cancel-button {
+      -webkit-appearance: none;
+    }
+  }
+}
+
+.filter {
+  width: 100%;
+  height: 100%;
+  left: 437px;
+  top: 537px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: misc.p2r(20px);
+  line-height: misc.p2r(29px);
+  border: none;
+  outline: 0;
+  text-decoration: none;
+  padding-left: 15px;
+  border-radius: 10px;
 }
