--- a/src/app/components/thoughts/list-thoughts/list-thoughts.component.html
+++ b/src/app/components/thoughts/list-thoughts/list-thoughts.component.html
@@ -1,5 +1,17 @@
 <section class="container">
   <header class="header d-flex">
+    <div class="search-thoughts">
+      <input
+        type="search"
+        id=""
+        class="filter"
+        placeholder="O que você procura?"
+        autofocus
+        [(ngModel)]="filter"
+        (keyup)="searchThoughts()"
+      />
+      <img src="/assets/images/icons/search-icon.png" alt="Lupa azul" />
+    </div>
     <h2 class="ff-inter">Meu Mural</h2>
     <button routerLink="/add-thought" class="button">
       Adicionar pensamento
