Search and pagination of favorite thoughts

--- a/src/app/components/thoughts/list-thoughts/list-thoughts.component.scss
+++ b/src/app/components/thoughts/list-thoughts/list-thoughts.component.scss
@@ -84,3 +84,14 @@ input {
   padding-left: 15px;
   border-radius: 10px;
 }
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  button {
+    margin-left: 10px;
+    margin-right: 2px;
+  }
+}
