--- a/src/app/components/thoughts/list-thoughts/list-thoughts.component.html
+++ b/src/app/components/thoughts/list-thoughts/list-thoughts.component.html
@@ -13,9 +13,11 @@
       <img src="/assets/images/icons/search-icon.png" alt="Lupa azul" />
     </div>
     <h2 class="ff-inter">Meu Mural</h2>
-    <button routerLink="/add-thought" class="button">
-      Adicionar pensamento
-    </button>
+    <div class="buttons">
+      <button class="button">Meu mural</button>
+      <button class="button" (click)="listFavorites()">Meus favoritos</button>
+      <button routerLink="/add-thought" class="button">Novo pensamento</button>
+    </div>
   </header>
   <div class="board" *ngIf="listThoughts.length > 0; else noThoughts">
     <div *ngFor="let thought of listThoughts">
